<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Give Food Now</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_donate">Donate Now</string>
    <string name="name">Your name</string>
    <string name="description">Enter the types of food, amount of food, and pickup instructions. (minimum 20 characters required)</string>
    <string name="availability_label">Available until</string>
    <string name="email">Your email</string>
    <string name="phone">Your contact number</string>
	<string name="location">Your address</string>
	<string name="cancel">Cancel</string>
	<string name="food_bank_map">Map of Food Banks</string>
	<string name="submit">Request food pickup</string>
</resources>
