<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/MainForm" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">
    
<EditText
  android:id="@+id/description"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/description"
  android:minLines="4"
  android:maxLength="500"
  android:scrollbars="none"
  android:inputType="textMultiLine"
  />

<ProgressBar android:id="@+id/progress"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  style="@android:style/Widget.ProgressBar.Large"
  android:layout_centerHorizontal="true"
  android:layout_centerVertical="true"/>
     
<TextView
  android:id="@+id/availabilityLabel"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginLeft="5dp"
  android:text="@string/availability_label"
  android:layout_below="@id/description"
  android:textAppearance="?android:attr/textAppearanceLarge" />

<DatePicker
  android:id="@+id/dpResult"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="5dp"
  android:layout_below="@id/availabilityLabel" />

<EditText
  android:id="@+id/name"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/name"
  android:autoText="true"
  android:maxLines="1" 
  android:maxLength="50" 
  android:layout_below="@id/dpResult"
  />

<EditText
  android:id="@+id/email"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/email"
  android:autoText="true"
  android:maxLines="1" 
  android:maxLength="100" 
  android:layout_below="@id/name"
  />

<EditText
  android:id="@+id/phone"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/phone"
  android:autoText="true"
  android:maxLines="1"
  android:maxLength="10" 
  android:layout_below="@id/email"
  />

<EditText
  android:id="@+id/location"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:hint="@string/location"
  android:lines="1"
  android:maxLines="1"
  android:autoText="true"
  android:maxLength="500"
  android:layout_below="@id/phone"
  android:singleLine="true"
  />
 
<Button android:id="@+id/foodBankMapButton"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/food_bank_map" 
  android:drawableTop="@drawable/ic_launcher"
  android:layout_below="@id/location"
  android:layout_alignParentLeft="true"
  android:layout_marginLeft="5dp"
/>

<Button android:id="@+id/submit"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/submit"
  android:drawableTop="@drawable/ic_launcher"
  android:layout_below="@id/location"
  android:layout_alignParentRight="true"
  android:layout_marginRight="5dp"
/>
</RelativeLayout>
</ScrollView>